--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -2,50 +2,54 @@
 background-color:rgb(1, 1, 21);
 height: 100vh;
 color:aliceblue;
-
-
-
 }
-.header{
 
+body{
+    background-color:rgb(1, 1, 21);
+}
+
+
+.header{
 display: flex;
 justify-content: space-between;
 margin: 10px;
-
-
 }
+
+
 .player{
 display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
 gap: 5px;
-
 }
+
+
 .upgrade-list{
 display: flex;
 flex-direction: column;
 align-items: start;
-
-
 }
+
+
 .action-buttons{
 display: flex;
-flex-direction: row;
-gap: 50px;
-
-
-
-
+flex-direction: column;
+gap: 10px;
+color: white;
 }
+
+
 .action-button{
 background-color: blue;
 }
+
+
 .player-button{
 background-color: red;
-
-
 }
+
+
 .pic{
 width: 50px;
 }
@@ -60,5 +64,9 @@ width: 50px;
     height: 30px;
 }
 
+.upgrades-action-cards{
+    display: flex;
+    gap: 30px;
+}
 
 
